--- a/src/app/main-content/comments-from-colleagues/comment/comment.component.scss
+++ b/src/app/main-content/comments-from-colleagues/comment/comment.component.scss
@@ -2,6 +2,7 @@
 
 #single-comments-container {
     gap: 60px;
+    align-items: flex-start;
 
     .single-comment {
         width: 25%;
